avoid table overflow

--- a/rg/prenotazioni/browser/resources/rg-reservation.css
+++ b/rg/prenotazioni/browser/resources/rg-reservation.css
@@ -71,6 +71,9 @@ td.selected {
 }
 
 /** Week view styles **/
+#week-table-wrapper {
+  overflow: auto;
+}
 table#week {
   margin: auto;
   width: 100%;
